# TestTaskFly

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BUGS.md  Dockerfile  Makefile  README.md  TEST_PLAN.md  compose.yaml  pyproject.toml  run-assignment.sh
load/: locustfile.py
src/automation_assignment/: __init__.py  __main__.py  cli.py
src/automation_assignment/api/: __init__.py  assets_client.py  integrations_client.py  query.py  routes.py
src/automation_assignment/commands/: readiness.py  write_summary.py
src/automation_assignment/config/: __init__.py  settings.py
src/automation_assignment/contract/: __init__.py  loader.py  swagger_contract.py
src/automation_assignment/domain/: __init__.py  models.py
src/automation_assignment/reporting/: __init__.py  run_summary.py
src/automation_assignment/support/: __init__.py  data_factory.py
src/automation_assignment/transport/: __init__.py  http_client.py  http_method.py  redaction.py
src/automation_assignment/workflows/: __init__.py  authentication.py  cleanup.py  entity_registry.py  tenant.py
tests/: conftest.py
tests/specs/: __init__.py  test_assets.py  test_authentication.py  test_contract.py  test_integrations.py  test_tenant_segregation.py
tests/unit/: test_architecture.py  test_builders.py  test_cli.py  test_config.py  test_contract.py  test_orchestration.py  test_redaction.py  test_transport.py  test_wait_for_api.py  test_workflows.py
