[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "automation-engineer-home-assignment"
version = "1.0.0"
description = "Layered Pytest automation for the Infralight integration API"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "httpx>=0.28,<0.29",
  "hypothesis>=6.135,<7",
  "jsonschema>=4.24,<5",
  "locust>=2.37,<3",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "pytest>=8.4,<9",
  "pytest-html>=4.1,<5",
  "schemathesis>=4.1,<5",
]

[project.scripts]
automation-assignment = "automation_assignment.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.16,<2",
  "ruff>=0.12,<1",
  "types-jsonschema>=4.24,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/automation_assignment"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "api: tests that require the running service",
  "contract: OpenAPI contract tests",
  "security: authentication and tenant-isolation tests",
  "bug(bug_id): regression test for a confirmed defect",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "load"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["automation_assignment"]
